<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/gamebg"
    android:orientation="vertical" >
	<TextView 
	android:id="@+id/textview_setting"
	android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:textColor="@drawable/black"
		android:textSize="20dp" 
		android:gravity="center_vertical|center_horizontal"
		android:text="@string/setting">
	</TextView>
	<RadioGroup 
		android:id="@+id/tip_radiogroup"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:orientation="vertical"
		>
		<TextView 
		android:id="@+id/textview_puzzletype"
		android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:textColor="@drawable/red"
			android:textSize="18dp" 
			android:text="@string/textview_puzzletype">
		</TextView>
		<!--  RadioButton 
			android:id="@+id/program_rb"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="@drawable/black"
			android:textSize="18dp" 
			android:text="@string/program_str"
			/>-->
		<RadioButton 
			android:id="@+id/cameral_rb"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"			
			android:textColor="@drawable/black"
			android:textSize="18dp" 
			android:text="@string/cameral_str"
			/>
		<RadioButton 
			android:id="@+id/filesystem_rb"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:textColor="@drawable/black"
			android:textSize="18dp" 
			android:text="@string/filesystem_str"
			/>
	</RadioGroup>
	

    <Button
        android:id="@+id/ok_btn"
        android:layout_width="120dp"
        android:layout_height="40dp"
		android:textSize="15dp" 			
		android:textColor="@drawable/blue"
        android:text="@string/ok_str"
        android:layout_gravity="center_vertical|center_horizontal"
        />
</LinearLayout>